--- a/Src/SmartNotifierApp.View/App.xaml
+++ b/Src/SmartNotifierApp.View/App.xaml
@@ -1,12 +1,13 @@
-﻿<Application x:Class="ConfigurationExample.App"
+﻿<Application x:Class="SmartNotifier.View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ConfigurationExample"
+             xmlns:local="clr-namespace:SmartNotifier.View"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/ToastNotifications.Messages;component/Themes/Default.xaml" />
+                <ResourceDictionary Source="ResourceDic\MainDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
