--- a/Src/SmartNotifierApp.View/MainWindow.xaml
+++ b/Src/SmartNotifierApp.View/MainWindow.xaml
@@ -1,57 +1,62 @@
-﻿<Window x:Class="ConfigurationExample.MainWindow"
+﻿<Window x:Class="SmartNotifier.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:utilities="clr-namespace:ConfigurationExample.Utilities"
-        Title="Smart Notifier App" Height="700" Width="1024" ShowInTaskbar="False">
+        xmlns:utilities="clr-namespace:SmartNotifier.View.Utilities"
+        xmlns:ViewModel="clr-namespace:SmartNotifier.View.ViewModel"
+        xmlns:Convertor="clr-namespace:SmartNotifier.View.Converters"
+        xmlns:View="clr-namespace:SmartNotifier.View.View"
+        Title="Smart Notifier App" Height="600" Width="800" ShowInTaskbar="False" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen"
+        FontFamily="Georgia" Background="Transparent"  Style="{DynamicResource MainWindowStyle}" x:Name="window" TabIndex="0" Foreground="#FFFFFFFF">
+    <Window.CommandBindings>
+        <CommandBinding Command="Close" Executed="CloseCommand_Executed"/>
+        <CommandBinding Command="{x:Static SystemCommands.MinimizeWindowCommand}" CanExecute="CommandBinding_CanExecute_1" Executed="MiniMize_Execute" />
+    </Window.CommandBindings>
     <Grid>
         <Grid.Resources>
-            <utilities:EnumBooleanConverter x:Key="EnumBooleanConverter" />
+            <Convertor:ImageToSourceConverter x:Key="ImageSourceConverter">
+            </Convertor:ImageToSourceConverter>
+            
+            <DataTemplate DataType="{x:Type ViewModel:OverviewViewModel}">
+                <View:OverView/>
+            </DataTemplate>
+           
         </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="1" HorizontalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-        </Grid>
-        
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" Orientation="Horizontal"  VerticalAlignment="Center"/>
-            <DockPanel Grid.Column="1" Grid.ColumnSpan="2" />
-        </Grid>
+        <Expander Header="Menu" IsExpanded="True" Margin="25,10,25,388" Height="100" Width="150" >
+            <ListBox x:Name="ListBoxMenu"                    
+                 Grid.Column="0"
+                 ItemsSource="{Binding DelarsMenu}"
+                  RenderTransformOrigin="0.51,0.18" Height="100" Width="150" SelectionChanged="ListBoxMenu_SelectionChanged" Margin="0,0,-2,0" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Icon,Converter={StaticResource ImageSourceConverter}}" Width="25" />
+                            <TextBlock Text="{Binding Name}" Padding="10"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Expander>
+       
 
-        <Grid Grid.Row="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" Orientation="Horizontal"  VerticalAlignment="Center" />
-        </Grid>
-
-
-        <Grid Grid.Row="4">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Column="1" >
                 <Button Content="Test Message" Margin="5" Width="100" Click="Button_ShowInformationClick" />
-
             </StackPanel>
         </Grid>
-   
+        <Border Grid.Column="1" Margin="0" BorderBrush="#FF202020"   BorderThickness="3,0,0,0">
+            <ContentControl Name="pnlcontent" Width="550" Height="450" />
+        </Border>
     </Grid>
 </Window>
