--- a/Src/SmartNotifierApp.View/View/OverView.xaml
+++ b/Src/SmartNotifierApp.View/View/OverView.xaml
@@ -19,7 +19,7 @@
             <ColumnDefinition Width="115"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="18" Text="Over View" FontWeight="Bold" VerticalAlignment="Top" RenderTransformOrigin="3.7,1" Grid.Column="1" Margin="110,10,0,0"/>
-            
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="18" Text="Overview" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="1" Margin="0,0,0,0" />
+        <Button Content="Test Message" Grid.Row="1" Grid.Column="0" Width="100" Click="Button_ShowInformationClick" HorizontalAlignment="Left" />
     </Grid>
 </UserControl>
