--- a/Src/SmartNotifierApp.View/MainWindow.xaml
+++ b/Src/SmartNotifierApp.View/MainWindow.xaml
@@ -22,6 +22,9 @@
             <DataTemplate DataType="{x:Type ViewModel:ProcessViewModel}">
                 <View:ProcessView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type ViewModel:NotifierViewModel}">
+                <View:NotifierView/>
+            </DataTemplate>
 
         </Grid.Resources>
         <Grid.RowDefinitions>
