--- a/Src/SmartNotifierApp.View/View/NotifierView.xaml
+++ b/Src/SmartNotifierApp.View/View/NotifierView.xaml
@@ -25,5 +25,7 @@
             <ColumnDefinition Width="125"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <TextBlock HorizontalAlignment="Left" Grid.ColumnSpan="2" FontSize="18" Text="Received Notifications" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Margin="0,0,0,0" />
+
     </Grid>
 </UserControl>
