--- a/Src/SmartNotifierApp.View/View/OverView.xaml
+++ b/Src/SmartNotifierApp.View/View/OverView.xaml
@@ -19,6 +19,11 @@
             <RowDefinition Height="25"/>
             <RowDefinition Height="25"/>
             <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -52,6 +57,20 @@
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="D Drive Info" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="9" Margin="0,0,0,0" />
         <ProgressBar  Grid.Row="9" Grid.Column="1"  Value="{Binding DDriveProgress, Mode=OneWay}" Height="20" Width="300" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding DDriveInfo}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="10" Margin="0,0,0,0" />
-        
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Scanner" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="11" Margin="0,0,0,0" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ConsoleInfo.Scanner}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="11" Margin="0,0,0,0" />
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Scanner Version" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="12" Margin="0,0,0,0" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ConsoleInfo.ScannerVersion}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="12" Margin="0,0,0,0" />
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Modality" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="13" Margin="0,0,0,0" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ConsoleInfo.Modality}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="13" Margin="0,0,0,0" />
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Model" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="14" Margin="0,0,0,0" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ConsoleInfo.Model}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="14" Margin="0,0,0,0" />
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Couch Type" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="15" Margin="0,0,0,0" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ConsoleInfo.CouchType}"  VerticalAlignment="Top" Grid.Column="1" Grid.Row="15" Margin="0,0,0,0" />
     </Grid>
 </UserControl>
