--- a/Src/SmartNotifierApp.View/View/SettingsView.xaml
+++ b/Src/SmartNotifierApp.View/View/SettingsView.xaml
@@ -32,19 +32,31 @@
         </Grid.ColumnDefinitions>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" FontSize="18" Text="Settings" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Margin="0,0,0,0" />
 
+
+
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Restart Notification Interval(Hours)" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
         <TextBox HorizontalAlignment="Left" Height="18"  MaxLines="1"  Text="{Binding RestartTimeNotificationInterval}" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="1" />
 
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Repeate Notification Time(Hours)" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" />
+
+
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Repeat Notification Time(Hours)" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" />
         <TextBox HorizontalAlignment="Left" Height="18"  MaxLines="1"  Text="{Binding RepeateNotificationTime}" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="2" />
+
+
 
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Threshold space for notification alert(GB)" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="3" />
         <TextBox HorizontalAlignment="Left" Height="18"  MaxLines="1"  Text="{Binding ThresholdSpaceForNotificationAlert}" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="3" />
 
+
+
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Service refresh interval(Seconds)" FontWeight="Bold" VerticalAlignment="Top" Grid.Column="0" Grid.Row="4" />
         <TextBox HorizontalAlignment="Left" Height="18"  MaxLines="1"  Text="{Binding DBRefreshInterval}" VerticalAlignment="Top" Width="50" Grid.Column="1" Grid.Row="4" />
 
-        <Button Content="Save Settings" HorizontalAlignment="Left" Command="{Binding SaveSettingsCommand}"  VerticalAlignment="Top" Width="75" Grid.Column="0"  Grid.Row="5"/>
+
+
+        <Button Content="Save Settings" FontSize="14" HorizontalAlignment="Left" Command="{Binding SaveSettingsCommand}"  VerticalAlignment="Top" Width="101" Grid.Column="0"  Grid.Row="5" Height="25"/>
+
+
 
     </Grid>
 </UserControl>
